# image-generation-papers

./: README.md  pyproject.toml  train_ddpm.py  train_vae.py
src/configs/: ddpm.yaml  vae.yaml
src/configs/criterion/: ddpm.yaml  vae.yaml
src/configs/dataloader/: default.yaml
src/configs/dataset/: mnist.yaml
src/configs/metrics/: default.yaml
src/configs/model/: ddpm.yaml  vae.yaml
src/configs/optimizer/: default.yaml
src/configs/transforms/: mnist.yaml
src/configs/transforms/batch_transforms/: default.yaml  mnist.yaml
src/configs/transforms/instance_transforms/: default.yaml
src/dataset/: base.py  collate.py  mnist.py  utils.py
src/logger/: wandb.py
src/loss/: ddpm.py  vae.py
src/metrics/: base.py  fid.py  tracker.py
src/model/ddpm/: __init__.py  attention.py  model.py  noise_scheduler.py  residual.py  unet.py
src/model/vae/: __init__.py  attention.py  model.py  residual.py
src/trainer/: base.py  ddpm_trainer.py  vae_trainer.py
src/utils/: init.py  io.py  torch.py
